[package]
name = "dice_contract"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
fable_library_rust = { workspace = true }
dice_contract_lib = { path = "../lib/contract" }
borsh = "~1.5"
near-sdk = "~5.1"
