[package]
name = "dice_lib"
version = "0.0.1"
edition = "2021"
workspace = "../"

[dependencies]
fable_library_rust = { path = "../../polyglot/lib/rust/fable/fable_modules/fable-library-rust", default-features = false, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
rand = { version = "~0.9.0-alpha.1" }
inline_colorization = "~0.1"

[dev-dependencies]

[[bin]]
name = "dice"
path = "dice.rs"
