cargo-features = ["edition2024"]

[package]
name = "dice_ui"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "dice_ui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fable_library_rust = { workspace = true, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
inline_colorization = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
base64 = ">=0.22,<1"
borsh = { version = "1.5", features = ["derive", "rc"] }
console_error_panic_hook = { version = ">=0.1,<1"}
console_log = { version = "1.0"}
gloo-net = { version = ">=0.6,<1", features = ["http"] }
js-sys = ">=0.3,<1"
leptos = { version = ">=0.8.11", features = ["csr", "nightly"] }
leptos_router = { version = ">=0.8.9,<1", features = ["nightly"] }
log = ">=0.4,<1"
reqwest-wasm = { version = ">=0.11,<1", features = ["json"] }
rexie = ">=0.5,<1"
serde = { version = "1.0", features = ["rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde-wasm-bindgen = ">=0.6,<1"
wasm-bindgen = { version = ">=0.2,<1" }
wasm-bindgen-futures = ">=0.4,<1"
web-sys = { version = ">=0.3,<1", features = ["Storage"] }
getrandom = { version = ">=0.2,<1", features = ["js"], default-features = false }
