[package]
name = "dice_contract_tests"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
anyhow = "~1.0"
borsh = { version = "~1.5" }
serde_json = { version = "~1.0", features = ["arbitrary_precision"] }
tokio = { version = ">=1.28", features = ["full"] }
near-workspaces = { version = "~0.10", features = ["experimental", "unstable"] }

[dev-dependencies]
