[package]
name = "dice_fsharp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
fable_library_rust = { workspace = true, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
inline_colorization = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
rand = { version = "~0.9.0-alpha.2" }
sha2 = "~0.11.0-pre.4"

[[bin]]
name = "dice_fsharp"
path = "dice_fsharp.rs"
