cargo-features = ["edition2024"]

[package]
name = "dice_fsharp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
fable_library_rust = { workspace = true, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
inline_colorization = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { version = "~0.9.0-alpha.2" }

[[bin]]
name = "dice_fsharp"
path = "dice_fsharp.rs"
